# MineLink

./: AGENTS.md  ARCHITECTURE.md  COOKBOOK.md  DEPLOYMENT_INSTRUCTIONS.md  README.md  REVIEW.md  SCALING.md  SKILLS.md  product_roadmap_implementation.md
contracts/: asyncapi.yaml
k8s/security/: mtls-certs.yaml  network-policies.yaml
k8s/state/cloud/: timescaledb-statefulset.yaml
k8s/state/edge/: redis-values.yaml
services/dispatch/: DispatchAgent.csproj  Program.cs
services/dispatch/Models/: DispatchStrategy.cs
services/dispatch/Services/: MqttDispatcher.cs
services/simulator/: CMakeLists.txt
services/simulator/include/: operator_agent.h
services/simulator/src/: main.cpp  operator_agent.cpp
services/supervisor/: go.mod  go.sum
services/supervisor/cmd/supervisor/: main.go
services/supervisor/internal/mqtt/: orchestrator.go
services/supervisor/internal/state/: state.go  state_test.go
terraform/cloud/: main.tf
terraform/edge/: main.tf
tests/chaos/: simulate_partition.py  synthetic_load.py
tests/integration/: test_mqtt_contracts.py
